--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,7 +5,7 @@
   border-radius: 5px;
   width: 100%;
   font-size: 16px;
-  color: #444;
+  color: #eee;
   font-weight: bold;
   cursor: pointer;
   border: none;
