finalizando detalhes app.

--- a/src/components/TaskDetails.css
+++ b/src/components/TaskDetails.css
@@ -5,11 +5,13 @@
   display: flex;
   flex-direction: column;
   color: #eee;
+  border-radius: 5px;
 }
 .task-details-container h2 {
   margin-bottom: 5px;
+  color: #eee;
 }
-.back-details-container {
+.back-button-container {
   width: 30%;
   margin-top: 10px;
 }
